# karp-studio

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.ts
.github/workflows/: publish.yml
guides/: Синтаксис.md  Тест1.md  Тест2.md
scripts/: gen_docs.ts
src/: globals.d.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/core/: controls.ts  examples.ts  history.ts  main.ts
src/interpreter/core/: interpreter.ts  scope.ts
src/interpreter/lexer/: lexer.ts  tokens.ts
src/interpreter/modules/: turtle.ts
src/interpreter/parser/: ast.ts  parser.ts
src/interpreter/utils/: runner.ts
src/ui/: cursor.ts  dialog.ts  dropdown.ts  editor.ts  elements.ts  explorer.ts  icons.ts  keybinds.ts  menubar.ts  resizers.ts
src/ui/contextmenu/: contextmenu.ts
src/ui/contextmenu/actions/: copy.ts  cut.ts  delete.ts  paste.ts
примеры/: квадрат_треугольник.карп  рыбалка.карп  спираль.карп
