[package]
name = "karp-studio"
version = "0.1.0"
description = "Karp Studio app"
authors = ["altwine"]
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"



[lib]
name = "karp_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
